<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	
    <TextView
       	style="@style/title"
		android:id="@+id/passcodeTitle"
		android:layout_width="match_parent"
   		android:layout_height="45dp"
   		android:gravity="center"
   		android:textSize="24sp"
   		android:background="@drawable/header_color" />
    <View
        android:layout_width="wrap_content"
        android:layout_height="20dp" />
    <TextView
		android:id="@+id/passcodeExp"
		android:layout_width="match_parent"
   		android:layout_height="45dp"
   		android:gravity="center"
   		android:textSize="18sp" />
    <ImageView 
        android:id="@+id/passcode"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
       	android:src="@mipmap/passcode0" />
    <View
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1" />
    <TableLayout
	    android:id="@+id/keyboard"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:stretchColumns="0,1,2"
	    android:background="#CCCCCC">
		<TableRow
		    android:layout_marginTop="5dp">
		    <Button
		        style="?android:attr/buttonStyle" 
		    	android:id="@+id/number1"
		    	android:text="@string/number1"
		    	android:onClick="pressButton"
		    	android:layout_height="wrap_content"/>
		    <Button 
		        style="?android:attr/buttonStyle" 
		    	android:id="@+id/number2"
		    	android:text="@string/number2"
		    	android:onClick="pressButton"
		    	android:layout_height="wrap_content"/>
		    <Button 
		        style="?android:attr/buttonStyle" 
		    	android:id="@+id/number3"
		    	android:text="@string/number3"
		    	android:onClick="pressButton"
		    	android:layout_height="wrap_content"/>
		</TableRow>
		<TableRow>
		    <Button 
		        style="?android:attr/buttonStyle" 
		    	android:id="@+id/number4"
		    	android:text="@string/number4"
		    	android:onClick="pressButton"
		    	android:layout_height="wrap_content"/>
		    <Button 
		        style="?android:attr/buttonStyle" 
		    	android:id="@+id/number5"
		    	android:text="@string/number5"
		    	android:onClick="pressButton"
		    	android:layout_height="wrap_content"/>
		    <Button 
		        style="?android:attr/buttonStyle" 
		    	android:id="@+id/number6"
		    	android:text="@string/number6"
		    	android:onClick="pressButton"
		    	android:layout_height="wrap_content"/>
		</TableRow>
		<TableRow>
		    <Button 
		        style="?android:attr/buttonStyle" 
		    	android:id="@+id/number7"
		    	android:text="@string/number7"
		    	android:onClick="pressButton"
		    	android:layout_height="wrap_content"/>
		    <Button 
		        style="?android:attr/buttonStyle" 
		    	android:id="@+id/number8"
		    	android:text="@string/number8"
		    	android:onClick="pressButton"
		    	android:layout_height="wrap_content"/>
		    <Button 
		        style="?android:attr/buttonStyle" 
		    	android:id="@+id/number9"
		    	android:text="@string/number9"
		    	android:onClick="pressButton"
		    	android:layout_height="wrap_content"/>
		</TableRow>
		<TableRow>
		    <View
		        android:layout_height="wrap_content"/>
		    <Button 
		        style="?android:attr/buttonStyle" 
		    	android:id="@+id/number0"
		    	android:text="@string/number0"
		    	android:onClick="pressButton"
		    	android:layout_height="wrap_content"/>
		    <Button 
		        style="?android:attr/buttonStyle" 
		    	android:id="@+id/backspace"
		    	android:text="@string/number_backspace"
		    	android:onClick="pressButton"
		    	android:layout_height="wrap_content"/>
		</TableRow>
	</TableLayout>
</LinearLayout>