<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
		<LinearLayout
	        android:id="@+id/headerView"
			android:layout_width="match_parent"
			android:layout_height="45dp"
			android:paddingTop="6dp"
			android:orientation="horizontal">
			<TextView 
		        style="@style/title"
		    	android:id="@+id/prevButton"
		    	android:layout_width="70dp"
		    	android:layout_height="wrap_content"
		    	android:text="@string/prev"
		    	android:textColor="@drawable/button_calendar"
		    	android:onClick="pressButton"/>
			<TextView
	        	style="@style/title"
				android:id="@+id/titletext"
				android:layout_weight="1"
				android:layout_width="0dp"
	    		android:layout_height="wrap_content"
	    		android:gravity="center"
	    		android:textSize="24sp"
	    		android:focusable="true"
	    		android:focusableInTouchMode="true">
	    		<requestFocus/>
	    	</TextView>
	    	<TextView 
	  			style="@style/title"
		    	android:id="@+id/nextButton"
		    	android:layout_width="70dp"
		    	android:layout_height="wrap_content"
		    	android:text="@string/next"
		    	android:textColor="@drawable/button_calendar"
		    	android:onClick="pressButton"/>
		</LinearLayout>
		<LinearLayout
	        android:id="@+id/mainView"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">
	    	<TableLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_margin="5dp"
			    android:stretchColumns="1,3">
				<TableRow>
				    <ImageView 
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:src="@mipmap/thermometer"
				        android:layout_marginRight="5dp"/>
				    <TextView 
				        android:id="@+id/tempinput"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:textSize="20sp"
				        android:clickable="true"
				        android:focusable="true"
				        android:focusableInTouchMode="true"
				        android:background="@drawable/textinput_gradation"/>
				    <TextView
				        android:text="@string/celsius"
				        android:layout_marginLeft="5dp"
				        android:textSize="20sp" />
				</TableRow>
				<TableRow
				    android:id="@+id/weightrow"
				    android:layout_marginTop="5dp">
				    <ImageView 
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:src="@mipmap/weight"
				        android:layout_marginRight="5dp"/>
				    <TextView 
				        android:id="@+id/weightinput"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:textSize="20sp"
				        android:clickable="true"
				        android:focusable="true"
				        android:focusableInTouchMode="true"
				        android:background="@drawable/textinput_gradation"/>
				    <TextView
				        android:text="@string/kg"
				        android:textSize="20sp"
				        android:layout_marginLeft="5dp"
				        android:layout_marginRight="15dp" />
				    <TextView 
				        android:id="@+id/ratioinput"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:textSize="20sp"
				        android:clickable="true"
				        android:focusable="true"
				        android:focusableInTouchMode="true"
				        android:background="@drawable/textinput_gradation"/>
		
				    <TextView
				        android:layout_marginLeft="5dp"
				        android:text="@string/parsent"
				        android:textSize="20sp" />
		
				</TableRow>
				<TableRow
				    android:layout_marginTop="5dp">
				    <ImageView 
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:src="@mipmap/memo_b"
				        android:layout_marginRight="5dp"/>
				    <EditText
				        android:id="@+id/memoinput"
				        android:layout_width="match_parent"
				        android:layout_height="100dp"
				        android:inputType="textMultiLine"
				        android:gravity="top"
				        android:layout_span="4"
				        android:background="@drawable/textinput_gradation" />
				</TableRow>
			</TableLayout>
		    <ListView
		        android:id="@+id/paramlist"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
				android:layout_weight="1"
		        android:layout_marginLeft="5dp"
		        android:layout_marginRight="5dp"
		        android:background="@drawable/paramlist_background" />
		    <com.google.android.gms.ads.AdView 
			    android:id="@+id/adView"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dp"
	            ads:adUnitId="ca-app-pub-6537404030859329/8096839936"
	            ads:adSize="BANNER"/>
		</LinearLayout>
	</LinearLayout>
	  	
	<TableLayout
	    android:id="@+id/keyboard"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:stretchColumns="0,1,2"
	    android:layout_gravity="bottom"
	    android:visibility="invisible"
	    android:background="#989ba0">
		<TableRow
		    android:layout_marginTop="1dp">
		    <Button
		       	style="@style/numberButton"
		    	android:id="@+id/number1"
		    	android:text="@string/number1"
		    	android:onClick="pressButton"
		    	android:layout_height="match_parent"/>
		    <Button 
		        style="@style/numberButton"
		    	android:id="@+id/number2"
		    	android:text="@string/number2"
		    	android:onClick="pressButton"
		    	android:layout_height="match_parent"/>
		    <Button
		        style="@style/numberButton"
		    	android:id="@+id/number3"
		    	android:text="@string/number3"
		    	android:onClick="pressButton"
		    	android:layout_height="match_parent"/>
		</TableRow>
		<TableRow>
		    <Button 
		        style="@style/numberButton"
		    	android:id="@+id/number4"
		    	android:text="@string/number4"
		    	android:onClick="pressButton"
		    	android:layout_height="match_parent"/>
		    <Button 
		        style="@style/numberButton"
		    	android:id="@+id/number5"
		    	android:text="@string/number5"
		    	android:onClick="pressButton"
		    	android:layout_height="match_parent"/>
		    <Button 
		        style="@style/numberButton"
		    	android:id="@+id/number6"
		    	android:text="@string/number6"
		    	android:onClick="pressButton"
		    	android:layout_height="match_parent"/>
		</TableRow>
		<TableRow>
		    <Button 
		        style="@style/numberButton"
		    	android:id="@+id/number7"
		    	android:text="@string/number7"
		    	android:onClick="pressButton"
		    	android:layout_height="match_parent"/>
		    <Button 
		        style="@style/numberButton"
		    	android:id="@+id/number8"
		    	android:text="@string/number8"
		    	android:onClick="pressButton"
		    	android:layout_height="match_parent"/>
		    <Button 
		        style="@style/numberButton"
		    	android:id="@+id/number9"
		    	android:text="@string/number9"
		    	android:onClick="pressButton"
		    	android:layout_height="match_parent"/>
		</TableRow>
		<TableRow>
		    <Button 
		        style="@style/numberButtonDark"
		    	android:id="@+id/dot"
		    	android:onClick="pressButton"
		    	android:layout_height="match_parent"/>
		    <Button 
		        style="@style/numberButton"
		    	android:id="@+id/number0"
		    	android:text="@string/number0"
		    	android:onClick="pressButton"
		    	android:layout_height="match_parent"/>
		    <Button 
		        style="@style/numberButtonDark"
		    	android:id="@+id/backspace"
		    	android:text="@string/number_backspace"
		    	android:onClick="pressButton"
		    	android:layout_height="match_parent"/>
		</TableRow>
	</TableLayout>
</FrameLayout>
