<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dp"
    android:stretchColumns="1">

    <TableRow>
        <TextView 
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/holiday_add_date"
	    	android:textSize="24sp"
	    	android:layout_gravity="center_vertical"/>
        <LinearLayout 
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<Spinner
			    android:id="@+id/month_spinner"
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="24sp"/>
			<Spinner
			    android:id="@+id/day_spinner"
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="24sp"/>
        </LinearLayout>
    </TableRow>
    <TableRow>
        <TextView 
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/holiday_add_name"
	    	android:textSize="24sp"/>
        <EditText
            android:id="@+id/name" 
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:inputType="text"
	    	android:textSize="24sp"/>
	</TableRow>
	<TableRow>
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_span="2"
	        android:text="@string/submit"
	        android:onClick="submit"/>
	</TableRow>
</TableLayout>